--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tiktok-discord-downloader",
+  "name": "tiktok-discord-bot",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
